public/css/base.css
/* ... */
/* IOS 4-7 */
audio:not([controls]) {
  display: none;
  height: 0;
}

/* IE */
textarea {
  overflow: auto;
}

/* IE9- */
audio,
video {
  display: inline-block;
}

/* IE10- */
[type="checkbox"], [type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

/*Chrome*/
[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

[type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

details, menu {
  display: block;
}

summary {
  display: list-item;
}

canvas {
  display: inline-block;
}

template {
  display: none;
}

[hidden] {
  display: none;
}

/*end normalize*/

div.group {
  overflow: hidden;
}

table, tr, td {
  table-layout: fixed;
  border-collapse: collapse;
  border-spacing: 0;
  padding: 0;
  margin: 0;
}
table.auto, table.auto tr, table.auto td {
  table-layout: auto;
}

table {
  width: 100%;
}

.featured .scoring {
  display: table;
  width: 100%;
  border-spacing: 5px;
  border-collapse: separate;
  text-align: center;
  margin-top: 5px;
}
.featured .scoring span,
.featured .scoring a {
  display: table-cell;
  padding: 5px;
  border-radius: 3px;
  margin-top: 5px;
  vertical-align: middle;
}
.featured .scoring .score {
  color: #000;
  border: 1px solid #d6d6d6;
  border-bottom-color: #cacaca;
  border-top-color: #e2e2e2;
  background: #f8f8f8;
}
.featured .scoring .like {
  color: #fff;
  border: 1px solid #699739;
  border-bottom-color: #638f36;
  border-top-color: #6fa03c;
  text-shadow: -1px -1px #699739;
  background: #7bb042 !important;
}
.featured .scoring .dislike {
  color: #fff;
  border: 1px solid #a73535;
  border-bottom-color: #9d3232;
  border-top-color: #b03838;
  text-shadow: -1px -1px #a73535;
  background: rgb(236, 72, 72) !important;
}
.featured .scoring .comments {
  color: #fff;
  border: 1px solid #3480b5;
  border-bottom-color: #3179ab;
  border-top-color: #3787bf;
  text-shadow: -1px -1px #3480b5;
  background: #3d95d3 !important;
}

.featured .description {
  overflow: hidden;
  max-height: 200px;
}
.featured .description img,
.featured .description div {
  display: none;
}

.post {
  width: 100%;
  overflow-wrap: break-word;
  word-wrap: break-word;
  word-break: break-word;
  -mox-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
}
.post + .post {
  margin-top: 10px;
  border-top: 1px solid rgba(0,0,150, 0.3);
}
.post .avatar {
  float: left;
  max-width: 100%;
  max-height: 240px;
  margin-right: 10px;
  margin-top: 10px;
  margin-bottom: 5px;
}
.description a {
  font-weight: initial;
}
@media(min-width: 450px) {
  .artist-bio .post .title {
    margin-left: 240px;
  }
}
@media(max-width:600px) {
  .artist-bio {
    text-align: center;
  }
  .artist-bio h1, .artist-bio .actions, .artist-bio .details {
    text-align: left;
  }
  .avatar.large {
    float: none;
    margin: 10px 0 0 0;
  }
  .artist-bio .post .title {
    display: block;
    margin-left: 0;
  }
}

.genre-icon {
  float: left;
  color: #a66ebe;
}

.post .genre-icon {
  margin-right: 10px;
}

.tag-header {
  vertical-align: middle;
  height: 8em;
  padding-top: 1em;
}
.tag-header .title {
  font-size: 1.5em;
  padding: 0;
  line-height: 0.5em;
}

.post .tag-header {
  margin-left: 8em;
}

.post .subheading {
  margin-bottom: 10px;
}

.avatar {
  display: inline-block;
  overflow: hidden;
  width: 150px;
  height: 150px;
  border-radius: 100%;
  background: no-repeat center rgb(178,230,251);
}
.avatar span, .genre-icon i::before, .genre-icon i {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 100%;
  background: no-repeat center/cover;
}
.avatar span {
  box-shadow: 0 0 10px -5px #000 inset, 0 0 1px 0 #000;
}
.avatar.large {
  width: 240px;
  height: 240px;
}
.avatar.medium {
  width: 60px;
  height: 60px;
}
.avatar.small {
  width: 30px;
  height: 30px;
}

.hovercard {
  position: absolute;
  transition: transform 0.5s ease;
  transform-origin: 0 0;
  transform: scale(0,0);
  top: 50%;
  left: 50%;
  z-index: 200;
  margin: -20px;
}
.post .hovercard .avatar {
  float: none;
  margin: 0px;
}
.hovercard li {
  list-style: none;
}
.user-link {
  position: relative;
}
.description .user-link, .comment-content .user-link, .comment-content a[data-link="2"] {
  color: #000;
  text-decoration: none;
  font-weight: bold;
}
.description .user-link:before, .comment-content .user-link:before {
  content: '@';
}

.actions .button, .actions button {
  margin-left: 4px;
  margin-bottom: 4px;
}

.hovercard.shown {
  transform: scale(1,1);
}

.post > * {
  vertical-align: top;
}
.space-fix {
  display: block;
  overflow-y: hidden;
}
.post .actions, .post .details {
  margin-top: 10px;
  padding-top: 10px;
  border-top: 1px solid rgba(0,0,150, 0.3);
}
.post .post-tags {
  margin-top: 30px;
  padding-top: 10px;
}

.post-tags.editing .normal, .post-tags .editing {
  display: none;
}
.post-tags.editing .editing {
  display: block;
}
.tiny-link {
  font-style: italic;
  color: #aaa;
  font-weight: normal;
  font-size: 0.8em;
  text-decoration: none;
}

.tag-list, .date, .source, .tag-list a {
  font-size: 0.8em;
}
.tag-list > .overflow {
  display: none;
  border-bottom: none;
}
.tag-list.show-all > .overflow {
  display: inline;
}
.tag-list, .date, .source, .tag-list a, .underline a {
  font-style: italic;
  color: #aaa;
  text-decoration: none;
  font-weight: normal;
}
a.source {
  text-decoration: none;
}
.post .date {
  position: absolute;
  top: 0px;
  right: 0px;
  padding: 10px 20px 10px 20px;
}

.post .actions .liked, .post .actions .starred {
  color: #fff;
}
/* ... */

